# sshsig

./: .gitignore  .gitlab-ci.yml  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  integration-test.yml
compat/: allowed_signers.py
docs/: index.md
docs/tutorial/: check_signature.md
sshsig/: allowed_signers.py  binary_io.py  ssh_keygen.py  ssh_public_key.py  sshsig.py  unexceptional.py  util.py
testdata/sshsig/0/: signer_identity
tests/: test_allowed_signers.py  test_cli.py  test_sshsig.py
